# Homework_webpython_14

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: a185efdc1285_init.py
src/: schemas.py
src/conf/: config.py
src/database/: connector.py  models.py
src/repository/: contacts.py  notes.py  users.py
src/routes/: auth.py  contacts.py  notes.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_notes.py  test_unit_repository_users.py
